--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,310 @@
+@-webkit-keyframes spin {
+    to {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    to {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+.rainbow {
+    border-radius: 100%;
+    -webkit-clip-path: inset(0 0 50% 0);
+    clip-path: inset(0 0 50% 0);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    height: 200px;
+    position: absolute;
+    width: 200px;
+    top: 55%;
+    left: 10%;
+    -webkit-transform: translate(-50%, -25%);
+    transform: translate(-50%, -25%);
+}
+
+.rainbow:after {
+    content: '';
+    height: 30px;
+    width: 30px;
+    position: absolute;
+    border-radius: 100%;
+    -webkit-box-shadow: -60px -2px 0 1px #ffffff, -55px -6px 0 1px #ffffff, -30px -2px 0 1px #ffffff, -30px -8px 0 1px #ffffff, -25px -2px 0 1px #ffffff, -25px -8px 0 1px #ffffff, -20px -6px 0 1px #ffffff, -15px -2px 0 1px #ffffff, 40px -2px 0 1px #ffffff, 35px -6px 0 1px #ffffff, 30px -2px 0 1px #ffffff, 30px -8px 0 1px #ffffff, 25px -2px 0 1px #ffffff, 25px -8px 0 1px #ffffff, 20px -6px 0 1px #ffffff, 15px -2px 0 1px #ffffff;
+    box-shadow: -80px -4px 0 1px #ffffff, -55px -8px 0 1px #ffffff, -30px -2px 0 1px #ffffff, -30px -8px 0 1px #ffffff, -25px -2px 0 1px #ffffff, -25px -8px 0 1px #ffffff, -20px -6px 0 1px #ffffff, -15px -2px 0 1px #ffffff, 80px -2px 0 1px #ffffff, 55px -6px 0 1px #ffffff, 30px -2px 0 1px #ffffff, 30px -8px 0 1px #ffffff, 25px -2px 0 1px #ffffff, 25px -8px 0 1px #ffffff, 20px -6px 0 1px #ffffff, 15px -2px 0 1px #ffffff;
+}
+
+.rainbow:before {
+    content: '';
+    height: 180px;
+    width: 180px;
+    -webkit-animation: spin 1.5s infinite;
+    animation: spin 1.5s infinite;
+    border-radius: 100%;
+    -webkit-box-shadow: 0 0 0 4px #f22613 inset, 0 0 0 8px #f89406 inset, 0 0 0 12px #f9bf3b inset, 0 0 0 16px #2ecc71 inset, 0 0 0 20px #19b5fe inset, 0 0 0 24px #663399 inset, 0 0 0 28px #bf55ec inset;
+    box-shadow: 0 0 0 4px #f22613 inset, 0 0 0 8px #f89406 inset, 0 0 0 12px #f9bf3b inset, 0 0 0 16px #2ecc71 inset, 0 0 0 20px #19b5fe inset, 0 0 0 24px #663399 inset, 0 0 0 28px #bf55ec inset;
+    -webkit-clip-path: inset(0 0 50% 0);
+    clip-path: inset(0 0 50% 0);
+    overflow: hidden;
+    position: absolute;
+}
+
+
+
+.bee {
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    top: 0px;
+    left: 250px;
+    animation: bounce 2s ease infinite, fly 6s ease-in-out infinite;
+    /* transform: translate(-50%, -50%) rotate(90deg) scale(1); */
+}
+
+
+
+@media only screen and (min-width: 100px) {
+
+    .bee {
+        left: 210px;
+    }
+
+    @keyframes bounce {
+
+        0%,
+        100% {
+            transform: translateX(20px) rotate(90deg) scale(1);
+            ;
+        }
+
+        50% {
+            transform: translateX(-30px) rotate(90deg) scale(1);
+            ;
+        }
+    }
+
+    @keyframes fly {
+
+        0%,
+        100% {
+            transform: translateY(0) rotate(90deg) scale(1);
+            ;
+        }
+
+        50% {
+            transform: translateY(50px) rotate(90deg) scale(1);
+            ;
+        }
+    }
+}
+
+@media only screen and (min-width: 700px) {
+
+    .bee {
+        left: 260px;
+    }
+
+
+    @keyframes bounce {
+
+        0%,
+        100% {
+            transform: translateX(0) rotate(90deg) scale(1.5);
+            ;
+        }
+
+        50% {
+            transform: translateX(30px) rotate(90deg) scale(1.5);
+            ;
+        }
+    }
+
+    @keyframes fly {
+
+        0%,
+        100% {
+            transform: translateY(0) rotate(90deg) scale(1.5);
+        }
+
+        50% {
+            transform: translateY(50px) rotate(90deg) scale(1.5);
+        }
+    }
+}
+
+.bee .body {
+    top: 12%;
+    left: 10%;
+    height: 80%;
+    width: 80%;
+    background: rgb(231, 235, 30);
+    position: relative;
+    clip-path: ellipse(33% 50% at 50% 50%);
+}
+
+.stripe {
+    height: 20%;
+    width: 100%;
+    border-bottom: 8px solid darkslategrey;
+    border-radius: 50%;
+    position: absolute;
+}
+
+.body .strip-1 {
+    top: 15%;
+}
+
+.body .strip-2 {
+    top: 40%;
+}
+
+.body .strip-3 {
+    top: 65%;
+}
+
+.bee .antenna-wrapper {
+    position: absolute;
+    height: 30%;
+    width: 5%;
+}
+
+.antenna-wrapper .tip {
+    position: absolute;
+    top: -2%;
+    height: 13%;
+    width: 70%;
+    border-radius: 50%;
+    background: darkslategrey;
+}
+
+.bee .antenna {
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+    border-left: 2px solid darkslategrey;
+    clip-path: polygon(0 0, 100% 0, 100% 70%, 0 70%);
+}
+
+.bee .antenna-wrapper-1 {
+    transform: rotate(-40deg);
+    top: 1%;
+    left: 35%;
+}
+
+.bee .antenna-wrapper-2 {
+    transform: rotate(-50deg);
+    top: 3%;
+    left: 30%;
+}
+
+.bee .eye {
+    position: absolute;
+    left: 41%;
+    height: 2%;
+    width: 2%;
+    border-radius: 50%;
+    background: darkslategrey;
+    top: 17%;
+}
+
+.bee .smile {
+    height: 10%;
+    width: 1%;
+    border-radius: 82% 18% 48% 52% / 45% 33% 67% 55%;
+    border-left: 2px solid darkslategrey;
+    position: absolute;
+    top: 14%;
+    left: 52%;
+    transform: rotate(200deg);
+}
+
+.bee .wing {
+    position: absolute;
+    height: 55%;
+    width: 55%;
+    background-color: lightgray;
+    border-radius: 50%;
+    perspective-origin: right center;
+    transform-style: preserve-3d;
+    transform-origin: right center;
+    perspective: 1000px;
+}
+
+.bee .wing-1 {
+    left: -18%;
+    top: 23%;
+    animation: fly-1 200ms infinite forwards alternate-reverse 1s;
+}
+
+.bee .wing-2 {
+    top: 35%;
+    left: -13%;
+    animation: fly-2 220ms infinite forwards alternate-reverse 1s;
+}
+
+.bee .sting {
+    position: absolute;
+    top: 87%;
+    left: 42%;
+    height: 15%;
+    width: 15%;
+    background-color: darkslategrey;
+    clip-path: polygon(50% 100%, 0 0, 100% 0);
+}
+
+@keyframes fly-1 {
+    from {
+        transform: rotateY(0);
+        opacity: 0.35;
+    }
+
+    to {
+        transform: rotateY(-50deg);
+        opacity: 0.2;
+    }
+}
+
+@keyframes fly-2 {
+    from {
+        transform: rotateY(0);
+        opacity: 0.3;
+    }
+
+    to {
+        transform: rotateY(40deg);
+        opacity: 0.5;
+    }
+}
+
+
+#text-logo {
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+#text-logo-skolka {
+    font-family: 'Norican', sans-serif;
+    color: rgb(32, 236, 215);
+    padding-right: 10px;
+    float: left;
+}
+
+#text-logo-vcelka {
+    font-family: 'Norican', sans-serif;
+    float: left;
+    color: rgb(218, 203, 30);
+
+}
 
 /*** Spinner Start ***/
 #spinner {
@@ -5,13 +312,14 @@
     visibility: hidden;
     transition: opacity .8s ease-out, visibility 0s linear .5s;
     z-index: 99999;
- }
+}
 
- #spinner.show {
-     transition: opacity .8s ease-out, visibility 0s linear .0s;
-     visibility: visible;
-     opacity: 1;
- }
+#spinner.show {
+    transition: opacity .8s ease-out, visibility 0s linear .0s;
+    visibility: visible;
+    opacity: 1;
+}
+
 /*** Spinner End ***/
 
 
@@ -69,6 +377,7 @@ h6,
 .animated {
     animation-duration: 2s !important;
 }
+
 /*** Common CSS End ***/
 
 
@@ -130,6 +439,7 @@ h6,
 .title-border-radius {
     border-radius: 10% 30%;
 }
+
 /*** Button End ***/
 
 
@@ -160,6 +470,7 @@ h6,
 .topbar .top-link a:hover i {
     color: var(--bs-primary) !important;
 }
+
 /*** Topbar End ***/
 
 
@@ -223,6 +534,7 @@ h6,
 #searchModal .modal-content {
     background: rgba(255, 255, 255, .8);
 }
+
 /*** Navbar End ***/
 
 
@@ -234,6 +546,7 @@ h6,
     background-repeat: no-repeat;
     background-size: cover;
 }
+
 /*** Hero Header ***/
 
 
@@ -365,6 +678,7 @@ h6,
     background-repeat: no-repeat;
     background-size: cover;
 }
+
 /*** About End ***/
 
 
@@ -421,6 +735,7 @@ h6,
 .service-item:hover .service-content-inner p {
     color: var(--bs-white) !important;
 }
+
 .service-item:hover .service-content-inner a.h4 {
     color: var(--bs-primary);
 }
@@ -434,6 +749,7 @@ h6,
     background: var(--bs-primary) !important;
     color: var(--bs-white) !important;
 }
+
 /*** Service End ***/
 
 
@@ -444,15 +760,15 @@ h6,
 
 .program .program-item .program-img .program-rate {
     position: absolute;
-    width: 100px; 
-    top: -20px; 
-    left: 50%; 
-    margin-left: -50px; 
+    width: 100px;
+    top: -20px;
+    left: 50%;
+    margin-left: -50px;
     border-radius: 10% / 50%;
 }
 
 .program .program-item .program-text {
-    padding-top: 150px; 
+    padding-top: 150px;
     margin-top: -125px;
 }
 
@@ -470,6 +786,7 @@ h6,
 .program .program-item:hover .program-text-inner a.h4 {
     color: var(--bs-primary) !important;
 }
+
 /*** Programs End ***/
 
 
@@ -483,16 +800,16 @@ h6,
 
 .events .events-item .events-inner .events-rate {
     position: absolute;
-    width: 120px; 
-    top: -20px; 
-    left: 50%; 
-    margin-left: -60px; 
+    width: 120px;
+    top: -20px;
+    left: 50%;
+    margin-left: -60px;
     border-radius: 10% / 50%;
 }
 
 .events .events-item .events-inner .events-img .event-overlay {
     position: absolute;
-    top: 50%; 
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     transition: 0.5s;
@@ -534,6 +851,7 @@ h6,
 .events .events-item:hover .events-img img {
     transform: scale(1.3);
 }
+
 /*** Events End ***/
 
 
@@ -557,7 +875,7 @@ h6,
 }
 
 .blog .blog-item .blog-date-comments {
-    padding-top: 150px !important; 
+    padding-top: 150px !important;
     margin-top: -125px;
 }
 
@@ -578,6 +896,7 @@ h6,
 .blog .blog-item:hover .blog-text-inner a.h4 {
     color: var(--bs-primary);
 }
+
 /*** Blog End ***/
 
 
@@ -623,13 +942,14 @@ h6,
 .team .team-item:hover .team-content p {
     color: var(--bs-dark) !important;
 }
+
 /*** Team end ***/
 
 
 /*** testimonial Start ***/
 .testimonial .testimonial-carousel {
     position: relative;
-    
+
 }
 
 .testimonial .testimonial-carousel .owl-dots {
@@ -654,6 +974,7 @@ h6,
     width: 30px;
     background: var(--bs-secondary);
 }
+
 /*** testimonial End ***/
 
 
@@ -667,7 +988,7 @@ h6,
 
 .footer .footer-galary-img img {
     width: 100%;
-    border-style: dotted; 
+    border-style: dotted;
     border-color: var(--bs-primary);
     transition: 0.5s;
 }
@@ -679,4 +1000,5 @@ h6,
 .footer-item a.text-body:hover {
     color: var(--bs-secondary) !important;
 }
+
 /*** Footer End ***/
