--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,72 @@
+/* .container-fluid.about.bg-light {
+    position: relative;
+    overflow: hidden;
+}
+
+#parallax-container::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('https://www.patternpictures.com/wp-content/uploads/grass-field-texture-patternpictures-2514-768x510.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center center;
+    transform: translate(0, 0);
+    z-index: -1;
+} */
+
+#aaa {
+    /* background-image: url('../background-clipart-clouds-powerpoint-templates.jpg'); */
+    background-color: #fffccb;
+    background-size: cover;
+
+}
+
+@media only screen and (min-width: 700px) {
+    .about {
+        background-image: url("../clipart975158.png");
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+}
+
+
+
+.container-fluid.border-bottom.wow.fadeIn.with-grass {
+    position: relative;
+}
+
+.container-fluid.border-bottom.wow.fadeIn.with-grass::before {
+    content: "";
+    position: absolute;
+    bottom: -5px;
+    /* Adjust the distance of the grass from the bottom */
+    left: 0;
+    right: 0;
+    height: 25px;
+    /* Adjust the height of the grass */
+    background-image: url('https://clipart-library.com/img1/750479.png');
+    /* Replace 'grass-image.png' with your grass image file path */
+    background-repeat: repeat-x;
+    background-size: auto 25px;
+    /* Adjust the size of the grass */
+    z-index: 1;
+    /* Adjust the z-index as needed */
+}
+
+#footer {
+    background-image: url('../grass.png');
+    /* Replace 'grass-image.png' with your grass image file path */
+    background-size: contain;
+
+}
+
+
 @-webkit-keyframes spin {
     to {
         -webkit-transform: rotate(360deg);
@@ -64,9 +133,9 @@
 .bee {
     height: 50px;
     width: 50px;
-    position: absolute;
+    /* position: absolute;
     top: 0px;
-    left: 250px;
+    left: 250px; */
     animation: bounce 2s ease infinite, fly 6s ease-in-out infinite;
     /* transform: translate(-50%, -50%) rotate(90deg) scale(1); */
 }
@@ -74,10 +143,6 @@
 
 
 @media only screen and (min-width: 100px) {
-
-    .bee {
-        left: 210px;
-    }
 
     @keyframes bounce {
 
@@ -88,7 +153,7 @@
         }
 
         50% {
-            transform: translateX(-30px) rotate(90deg) scale(1);
+            transform: translateX(-20px) rotate(90deg) scale(1);
             ;
         }
     }
@@ -97,12 +162,12 @@
 
         0%,
         100% {
-            transform: translateY(0) rotate(90deg) scale(1);
+            transform: translateY(-20px) rotate(90deg) scale(1);
             ;
         }
 
         50% {
-            transform: translateY(50px) rotate(90deg) scale(1);
+            transform: translateY(20px) rotate(90deg) scale(1);
             ;
         }
     }
@@ -110,21 +175,16 @@
 
 @media only screen and (min-width: 700px) {
 
-    .bee {
-        left: 260px;
-    }
-
-
     @keyframes bounce {
 
         0%,
         100% {
-            transform: translateX(0) rotate(90deg) scale(1.5);
+            transform: translateX(-10px) rotate(90deg) scale(1.5);
             ;
         }
 
         50% {
-            transform: translateX(30px) rotate(90deg) scale(1.5);
+            transform: translateX(20px) rotate(90deg) scale(1.5);
             ;
         }
     }
@@ -133,11 +193,11 @@
 
         0%,
         100% {
-            transform: translateY(0) rotate(90deg) scale(1.5);
+            transform: translateY(-10px) rotate(90deg) scale(1.5);
         }
 
         50% {
-            transform: translateY(50px) rotate(90deg) scale(1.5);
+            transform: translateY(20px) rotate(90deg) scale(1.5);
         }
     }
 }
@@ -286,15 +346,33 @@
     }
 }
 
+@media only screen and (min-width: 700px) {
+    #text-logo-skolka {
+        font-size: 3em;
+
+    }
+
+    #text-logo-vcelka {
+        font-size: 3em;
+
+    }
+}
+
+
 
 #text-logo {
     margin-top: 10px;
     margin-left: 10px;
 }
 
+#Bee {
+    float: left;
+
+}
+
 #text-logo-skolka {
     font-family: 'Norican', sans-serif;
-    color: rgb(32, 236, 215);
+    color: rgb(255, 155, 14);
     padding-right: 10px;
     float: left;
 }
@@ -303,6 +381,7 @@
     font-family: 'Norican', sans-serif;
     float: left;
     color: rgb(218, 203, 30);
+    margin-right: 20px;
 
 }
 
@@ -672,12 +751,11 @@ h6,
     border-radius: 50% 20% / 10% 40%;
 }
 
-.about {
-    background: linear-gradient(rgba(255, 72, 128, 0.05), rgba(255, 234, 7, 0.903));
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+
+
+/* .bottom {
+
+} */
 
 /*** About End ***/
 
